# voproshalych

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
bot-service/: pyproject.toml
bot-service/bots/max/: Dockerfile  go.mod  go.sum  main.go
bot-service/bots/telegram/: Dockerfile  bot.py
bot-service/bots/vk/: Dockerfile  bot.py
bot-service/core/: Dockerfile  config.py  db.py  main.py  pyproject.toml
bot-service/core/models/: callback.py  message.py  response.py
bot-service/core/services/: bot_service.py  dialog_service.py  holiday_newsletter.py  qa_service_client.py  (+1 more)
bot-service/docs/: bot-development.md  dialog-context.md  holiday-newsletter.md  message-flow.md  overview.md
db/: Dockerfile  alembic.ini  pyproject.toml
db/migration/: env.py
db/migration/versions/: 001_initial.py  002_users_platform_unique.py  003_users_timestamps_and_subscription_defaults.py  004_add_vector_column.py
db/src/voproshalych_db/: __init__.py  base.py  session.py
db/src/voproshalych_db/models/: __init__.py  base.py
docs/: onboarding_guide.md  pipeline-user-query.md
postgres/: Dockerfile
qa-service/: Dockerfile  lightrag_query.py  pyproject.toml  save_models.py
qa-service/docs/: KB_FILL_GUIDE.md  knowledge_graph_guide.md  message-flow.md  testing.md
qa-service/scripts/: fill_kb.py  fill_kb_from_sources.py
qa-service/scripts/test/: check_freshness.py  sveden_request.txt  tool_pars_sveden.py
qa-service/src/qa/: __init__.py  lightrag_adapter.py  lightrag_import.py  main.py
qa-service/src/qa/api/: __init__.py
qa-service/src/qa/api/routes/: __init__.py  health.py  holiday.py  kb.py  qa.py
qa-service/src/qa/config/: prompts.py
qa-service/src/qa/kb/: __init__.py  chunking.py  config.py  embedding.py  search.py
qa-service/src/qa/kb/parsers/: __init__.py  base.py  confluence.py  ocr_cache.py  pdf_detector.py  sveden.py  utmn.py  web.py
qa-service/src/qa/llm/: __init__.py  config.py  pool.py
qa-service/src/qa/llm/providers/: __init__.py  base.py  gigachat.py  mistral.py  openrouter.py  yandexcloud.py
qa-service/src/qa/models/: __init__.py  request.py
qa-service/tests/: __init__.py
qa-service/tests/integration/: __init__.py  test_qa_api.py
qa-service/tests/unit/: __init__.py  test_llm_pool.py  test_providers.py
